# Rexell

./: .env.example  .gitignore  MANUAL_TESTING.md  PROJECT_PLAN.md  README.md  RESALE_IMPLEMENTATION.md  Rexell_Architecture_Blueprint.md  Rexell_Complete_System_Documentation.md  Rexell_Failed_And_Important_Test_Cases.md  Rexell_Test_Cases.md  SYSTEM_DIAGRAMS.md  TECH_STACK.md  TESTING_GUIDE.md  UML_ARCHITECTURE.html  deploy_output.txt  hardhat.config.js  hardhat.d.ts  package-lock.json  package.json  pnpm-lock.yaml  project_schedule.md  scalper-legit-model.md  seed_wallet.py  tmpclaude-20fc-cwd  tsconfig.json  update_abi.py  ~$Final_Project_ppt03.pptx
ai_model_training/: blockchain_ticketing_master.csv  synthetic_ticketing_dataset.csv
bot-detection/: .env.example  .gitignore  cdk.context.json  cdk.json  package-lock.json  (+3 more)
bot-detection/services/shared/: alembic.ini  demo.py  demo_prod.py  demo_v4.py  pyproject.toml
bot-detection/services/shared/alembic/: env.py  script.py.mako
bot-detection/services/shared/alembic/versions/: 0001_initial.py
bot-detection/services/shared/src/shared/: __init__.py  analyzer.py  archival.py  archival_runner.py  audit.py  config.py  fallback.py  metrics.py  privacy.py  resale_analyzer.py  retention.py  retention_runner.py  risk_scorer.py  testing_mode.py
bot-detection/services/shared/src/shared/clients/: ml_client.py
bot-detection/services/shared/src/shared/db/: __init__.py  models.py  repositories.py  session.py
bot-detection/services/shared/src/shared/models/: __init__.py  types.py
bot-detection/services/shared/src/shared/utils/: __init__.py  crypto.py  time_utils.py
(+342 files in other folders)
