[tool.poetry]
name = "rexell-shared"
version = "0.1.0"
description = "Shared models and data access layer for Rexell Bot Detection"
authors = ["Rexell"]
packages = [{include = "shared", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = ">=2.10.0"
alembic = ">=1.14.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.35"}
asyncpg = ">=0.30.0"
passlib = "^1.7.4"
httpx = ">=0.27.2"
tenacity = ">=8.5.0"
redis = {extras = ["hiredis"], version = ">=5.0.8"}
numpy = ">=2.0.0"
pydantic-settings = ">=2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
hypothesis = "^6.99.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
